--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "http": "0.0.0",
-    "mosca": "^2.8.3",
+    "mongodb": "^3.2.3",
     "node-red": "^0.20.5",
-    "node-red-flows-mongo": "^0.5.2"
+    "node-red-contrib-mqtt-broker": "~0.2.4",
+    "node-red-mongodb": "0.0.18",
+    "util": "^0.11.1",
+    "when": "^3.7.8"
   }
 }
